Fix #28 - Border radius on Safari

--- a/src/styles/features/_post.scss
+++ b/src/styles/features/_post.scss
@@ -337,6 +337,10 @@
         margin-top: -105px;
       }
 
+      .slick-list {
+        border-radius: 16px;
+      }
+
       .slick-slide {
         text-align: center;
         width: 100%;
